--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss-preset-env": "^6.5.0",
     "postcss-scss": "^2.0.0",
     "precss": "^4.0.0",
+    "selenium-webdriver": "^4.0.0-alpha.1",
     "string-to-stream": "^1.1.1",
     "vinyl": "^2.2.0",
     "vinyl-buffer": "^1.0.1",
